--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:17
+    image: lucianlupan/pbl:database
     container_name: db_server
     ports:
       - 5433:5432
@@ -14,6 +14,7 @@ services:
       - postgresdata:/var/lib/postgresql/data
     env_file:
       - .env
+
   web:
     build: .
     container_name: wb_server
